# AgIsoDevelopmentTools

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh
builder/: clone_and_build.sh
clang-tidy-std-prefix/: CMakeLists.txt  README.md  StdFixedIntPrefixCheck.cpp  StdFixedIntPrefixCheck.h  StdPrefixModule.cpp
clang-tidy-std-prefix/example/: .clang-tidy  sample.cpp
